revise output chap3

--- a/02_Demand_Estimation/output/chap3_logit_iv_1st.tex
+++ b/02_Demand_Estimation/output/chap3_logit_iv_1st.tex
@@ -1,8 +1,8 @@
 \begin{table}
 \centering
-\begin{tabular}{l|c|c}
+\begin{tabular}{l|l|c}
 \hline
- & iv1st\_BLP & iv1st\_GH\\
+  & iv1st\_BLP & iv1st\_GH\\
 \hline
 馬力／重量 & 22.7 (1.4) & 17.0 (1.5)\\
 \hline
@@ -22,7 +22,7 @@ iv\_BLP\_own\_FuelEfficiency & -0.001 (0.0008) & \\
 \hline
 iv\_BLP\_own\_size & -0.003 (0.002) & \\
 \hline
-iv\_BLP\_other\_size & -0.0003 (0.0005) & \\
+iv\_BLP\_other\_size & 0.0002 (0.0005) & \\
 \hline
 iv\_GH\_own\_hppw &  & -1.5 (0.42)\\
 \hline
@@ -36,13 +36,13 @@ iv\_GH\_other\_FuelEfficiency &  & 1.8e-5 (8.7e-6)\\
 \hline
 iv\_GH\_other\_size &  & 0.0001 (4.5e-5)\\
 \hline
-Fixed-Effects: & ---------------- & ----------------\\
+Fixed-Effects: & --------------- & ----------------\\
 \hline
 year & Yes & Yes\\
 \hline
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\\
+\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\\
 \hline
-S.E. type & Heterosked.-rob. & Heterosked.-rob.\\
+S.E. type & Heteroske.-rob. & Heterosked.-rob.\\
 \hline
 R2 & 0.69 & 0.71\\
 \hline
