--- a/02_Demand_Estimation/output/chap3_ols_intro.tex
+++ b/02_Demand_Estimation/output/chap3_ols_intro.tex
@@ -1,32 +1,32 @@
 \begin{table}
 \centering
-\begin{tabular}{l|c}
+\begin{tabular}{l|l}
 \hline
- & OLS\_NIPPYO\\
+  & OLS\_NIPPYO\\
 \hline
-定数項 & 4.1 (1.7)\\
+定数項 & 3.4 (1.6)\\
 \hline
-log(価格) & -1.7 (0.58)\\
+log(価格) & -2.6 (0.52)\\
 \hline
-馬力／重量 & -2.4 (6.7)\\
+馬力／重量 & 5.0 (5.1)\\
 \hline
-燃費(キロメートル／ 1 リットル) & 0.21 (0.05)\\
+燃費(キロメートル／ 1 リットル) & 0.12 (0.04)\\
 \hline
-サイズ & 0.33 (0.09)\\
+サイズ & 0.52 (0.12)\\
 \hline
-キャパシティダミー(5以上) & 0.33 (0.31)\\
+キャパシティダミー(5以上) & -0.23 (0.34)\\
 \hline
-レギュラータイプダミー & -1.4 (0.42)\\
+レギュラータイプダミー & -0.56 (0.39)\\
 \hline
-外国車ダミー & 0.56 (0.34)\\
+外国車ダミー & 1.1 (0.32)\\
 \hline
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\\
+\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\\
 \hline
-S.E. type & Heter.-rob.\\
+S.E. type & Hetero.-rob.\\
 \hline
-R2 & 0.32\\
+R2 & 0.25\\
 \hline
-Observations & 208\\
+Observations & 196\\
 \hline
 \end{tabular}
 \end{table}
