--- a/02_Demand_Estimation/output/chap3_own_elas.tex
+++ b/02_Demand_Estimation/output/chap3_own_elas.tex
@@ -1,12 +1,12 @@
 \begin{table}
 \centering
-\begin{tabular}{l|c|c|c|c|c}
+\begin{tabular}{l|l|c|c|c|c}
 \hline
   & Mean & Std.Dev & Median & Min & Max\\
 \hline
 own\_elas\_ols & -0.79 & 0.57 & -0.64 & -3.95 & -0.22\\
 \hline
-own\_elas\_ivblp & -1.39 & 1.01 & -1.13 & -6.95 & -0.39\\
+own\_elas\_ivblp & -1.85 & 1.34 & -1.50 & -9.25 & -0.52\\
 \hline
 own\_elas\_ivgh & -1.15 & 0.83 & -0.93 & -5.76 & -0.32\\
 \hline
