--- a/02_Demand_Estimation/output/chap3_logit_iv.tex
+++ b/02_Demand_Estimation/output/chap3_logit_iv.tex
@@ -1,22 +1,22 @@
 \begin{table}
 \centering
-\begin{tabular}{l|c|c|c}
+\begin{tabular}{l|l|c|c}
 \hline
- & OLS & iv\_BLP & iv\_GH\\
+  & OLS & iv\_BLP & iv\_GH\\
 \hline
-自動車価格 & -0.31 (0.03) & -0.55 (0.35) & -0.46 (0.12)\\
+自動車価格 & -0.31 (0.03) & -0.73 (0.34) & -0.46 (0.12)\\
 \hline
-馬力／重量 & 2.3 (1.3) & 7.7 (8.1) & 5.5 (3.0)\\
+馬力／重量 & 2.3 (1.3) & 11.8 (7.9) & 5.5 (3.0)\\
 \hline
-燃費(キロメートル／ 1 リットル) & 0.18 (0.01) & 0.19 (0.02) & 0.19 (0.01)\\
+燃費(キロメートル／ 1 リットル) & 0.18 (0.01) & 0.20 (0.02) & 0.19 (0.01)\\
 \hline
-サイズ & 0.28 (0.03) & 0.36 (0.12) & 0.33 (0.05)\\
+サイズ & 0.28 (0.03) & 0.42 (0.11) & 0.33 (0.05)\\
 \hline
-キャパシティダミー(5以上) & -0.13 (0.12) & -0.27 (0.23) & -0.22 (0.13)\\
+キャパシティダミー(5以上) & -0.13 (0.12) & -0.39 (0.23) & -0.22 (0.13)\\
 \hline
-レギュラータイプダミー & -0.20 (0.13) & -0.55 (0.52) & -0.41 (0.22)\\
+レギュラータイプダミー & -0.20 (0.13) & -0.81 (0.51) & -0.41 (0.22)\\
 \hline
-外国車ダミー & 0.45 (0.12) & 0.55 (0.20) & 0.51 (0.13)\\
+外国車ダミー & 0.45 (0.12) & 0.64 (0.22) & 0.51 (0.13)\\
 \hline
 Fixed-Effects: & ------------ & ------------ & ------------\\
 \hline
@@ -26,7 +26,7 @@ year & Yes & Yes & Yes\\
 \hline
 S.E. type & Hetero.-rob. & Hetero.-rob. & Hetero.-rob.\\
 \hline
-R2 & 0.28 & 0.26 & 0.27\\
+R2 & 0.28 & 0.22 & 0.27\\
 \hline
 Observations & 1,823 & 1,823 & 1,823\\
 \hline
