revise output chap4

--- a/02_Demand_Estimation/output/chap4_nest_iv.tex
+++ b/02_Demand_Estimation/output/chap4_nest_iv.tex
@@ -1,8 +1,8 @@
 \begin{table}
 \centering
-\begin{tabular}{l|c|c}
+\begin{tabular}{l|l|c}
 \hline
- & OLS & IV\_GH\\
+  & OLS & IV\_GH\\
 \hline
 自動車価格 & -0.12 (0.02) & -0.33 (0.06)\\
 \hline
