--- a/02_Demand_Estimation/Chap5.Rmd
+++ b/02_Demand_Estimation/Chap5.Rmd
@@ -651,7 +651,7 @@ ggsave(g, file = "output/chap5_margin.pdf", width = 9, height = 6, device = cair
 
 需要推定結果を用いて、限界費用関数の推定及び合併シミュレーションを行う。
 
-**留意点**: 第３章・ 第４章においては、日評自動車はランダムに選んだ車種を生産・販売していると考えたが、今回第５章ではホンダの車種を生産・販売する企業として扱う。
+**留意点**: 今回第５章では、日評自動車はホンダの車種を生産・販売する企業として扱う。
 
 
 ## 準備
