--- a/02_Demand_Estimation/output/chap4_blp.tex
+++ b/02_Demand_Estimation/output/chap4_blp.tex
@@ -1,6 +1,6 @@
 \begin{table}
-
-\caption{\label{tab:unnamed-chunk-19}Estimates of The Parameters}
+\centering
+\caption{Estimates of The Parameters}
 \centering
 \begin{tabular}[t]{l|l|c}
 \hline
